--- a/goal.html
+++ b/goal.html
@@ -19,7 +19,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Club-Mate</a>
+            <a class="navbar-brand" href="goal.html">Club-Mate</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
