--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta ="abstract" content ="site documenting club-mate" />
     <meta name="description" content="site documenting club-mate" />
-    <meta name="keywords" content="epfl, dojo, club-mate"
+    <meta name="keywords" content="epfl, dojo, club-mate" />
     <meta name="title" content="dojoclub-mate" />
     <meta name="author" content="Richard Tenorio" />
     <meta name="revisit-after" content="7" />
